# fastapi-html

./: README.md  pyproject.toml
src/: html.py  model.py  rest.py
templates/: form.html
