[tool.poetry]
name = "fastapi_forms"
version = "0.1.0"
description = ""
authors = ["adityagrover027 <adityagrover027@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.67.0"
uvicorn = "^0.14.0"
Jinja2 = "^3.0.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
